close #32 fixed logging

--- a/qnd/logging.conf
+++ b/qnd/logging.conf
@@ -23,6 +23,9 @@ level=DEBUG
 formatter=simple
 args=(sys.stdout,)
 
+[formatters]
+keys=simple
+
 [formatter_simple]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
