--- a/qnd/requirements.txt
+++ b/qnd/requirements.txt
@@ -8,6 +8,7 @@ Flask==0.12
 flask-restplus==0.10.1
 Flask-SQLAlchemy==2.2
 functools32==3.2.3.post2
+gunicorn==19.7.1
 idna==2.5
 ipaddress==1.0.18
 itsdangerous==0.24
