--- a/qnd/requirements.txt
+++ b/qnd/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==1.2.0
+APScheduler==3.3.1
 asn1crypto==0.21.1
 cffi==1.9.1
 click==6.7
@@ -7,7 +8,9 @@ enum34==1.1.6
 Flask==0.12
 flask-restplus==0.10.1
 Flask-SQLAlchemy==2.2
+funcsigs==1.0.2
 functools32==3.2.3.post2
+futures==3.0.5
 gunicorn==19.7.1
 idna==2.5
 ipaddress==1.0.18
@@ -19,6 +22,7 @@ packaging==16.8
 paramiko==2.1.2
 pip==6.1.1
 psutil==5.2.0
+psycopg2==2.7.1
 pyasn1==0.2.3
 pycparser==2.17
 pycrypto==2.6.1
@@ -28,4 +32,6 @@ pytz==2016.10
 setuptools==15.0
 six==1.10.0
 SQLAlchemy==1.1.6
+tzlocal==1.3
 Werkzeug==0.12
+wheel==0.29.0
