--- a/qnd/requirements.txt
+++ b/qnd/requirements.txt
@@ -3,6 +3,7 @@ APScheduler==3.3.1
 asn1crypto==0.21.1
 cffi==1.9.1
 click==6.7
+configparser==3.5.0
 cryptography==1.8.1
 enum34==1.1.6
 Flask==0.12
