close #64 created close #66 fixed bumping versions to alpha-2 (preparation for release)

--- a/install/ubuntu-xenial/nginx.conf
+++ b/install/ubuntu-xenial/nginx.conf
@@ -31,6 +31,7 @@ http {
         # Settings to serve static files 
         location ^~ /gui/  {
             root /opt/qndbackup/qnd;
+			include /etc/nginx/mime.types;
         }
 
         # Serve a static file (ex. favico)
