--- a/install/ubuntu-xenial/qnd.service
+++ b/install/ubuntu-xenial/qnd.service
@@ -6,4 +6,4 @@ After=network.target
 User=qnd
 Group=qnd
 WorkingDirectory=/opt/qndbackup/qnd
-ExecStart=/usr/local/bin/gunicorn --workers 1 --bind 127.0.0.1:8080 --error-logfile /var/log/qnd/error.log --log-file /var/log/qnd/qnd.log --access-logfile /var/log/qnd/access.log --log-level info wsgi
+ExecStart=/usr/local/bin/gunicorn --workers 1 --bind 127.0.0.1:8080 --error-logfile /var/log/qnd/error.log --log-file /var/log/qnd/qnd.log --access-logfile /var/log/qnd/access.log --log-level info app:app
