--- a/qnd/requirements.txt
+++ b/qnd/requirements.txt
@@ -7,6 +7,7 @@ configparser==3.5.0
 cryptography==1.8.1
 enum34==1.1.6
 Flask==0.12
+Flask-Admin==1.5.0
 flask-restplus==0.10.1
 Flask-SQLAlchemy==2.2
 funcsigs==1.0.2
@@ -36,3 +37,4 @@ SQLAlchemy==1.1.6
 tzlocal==1.3
 Werkzeug==0.12
 wheel==0.29.0
+WTForms==2.1
