--- a/install/ubuntu-xenial/nginx.conf
+++ b/install/ubuntu-xenial/nginx.conf
@@ -38,7 +38,11 @@ http {
         # outside /static directory
         location = /favico.ico  {
             root /opt/qndbackup/qnd/gui/favico.ico;
-
+        }
+		
+		# Blocking Flask-Admin
+		location = /admin/  {
+            rewrite ^ / permanent;
         }
 
         # Proxy connections to the application servers
