--- a/qnd/requirements.txt
+++ b/qnd/requirements.txt
@@ -1,24 +1,32 @@
-
-
-configparser==3.5.0
-
-enum34==1.1.6
-
-funcsigs==1.0.2
-functools32==3.2.3.post2
-futures==3.0.5
-gunicorn==19.7.1
-idna==2.5
-ipaddress==1.0.18
-
-
-packaging==16.8
-
-pyasn1==0.2.3
-
-pycrypto==2.6.1
-pyparsing==2.2.0
-
-
-wheel==0.29.0
-
+aniso8601==7.0.0
+APScheduler==3.6.0
+asn1crypto==0.24.0
+attrs==19.1.0
+bcrypt==3.1.7
+cffi==1.12.3
+Click==7.0
+cryptography==2.7
+Flask==1.1.0
+Flask-Admin==1.5.3
+flask-restplus==0.12.1
+Flask-SQLAlchemy==2.4.0
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsonschema==3.0.1
+MarkupSafe==1.1.1
+paramiko==2.6.0
+pip==10.0.1
+psutil==5.6.3
+psycopg2==2.8.3
+pycparser==2.19
+PyNaCl==1.3.0
+pyrsistent==0.15.2
+python-dateutil==2.8.0
+pytz==2019.1
+setuptools==39.0.1
+six==1.12.0
+SQLAlchemy==1.3.5
+tzlocal==1.5.1
+Werkzeug==0.15.4
+WTForms==2.2.1
